<resources>
    <string name="app_name">sample</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="signIn">ورود به حساب کاربری</string>
    <string name="darik">دریک</string>
    <string name="userName">نام کاربری</string>
    <string name="password">رمز ورود</string>
    <string name="signin">ورود</string>
    <string name="createAccount">ایجاد حساب کاربری</string>
    <string name="confirmPass">تکرار رمز ورود</string>
    <string name="create">ایجاد</string>
</resources>